# applications_camera

./: .gitignore  OAT.xml  README.md  README_zh.md  build-profile.json5  build.sh  cameraExchange.bat  oh-package.json5
AppScope/: app.json5
appnative/: Index.ets  build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package.json5
appnative/src/main/: module.json5
appnative/src/main/cpp/: CMakeLists.txt  napi_init.cpp
appnative/src/main/cpp/common/: Log.h
appnative/src/main/cpp/rouletteZoom/: native_bridge.cpp  native_bridge.h  native_node.cpp  native_node.h  zoom_calculate.cpp  zoom_calculate.h  zoom_param.h  zoom_struct.cpp  zoom_struct.h
appnative/src/main/cpp/types/libappnative/: index.d.ts  oh-package.json5
common/: BuildProfile.ets  build-profile.json5  hvigorfile.ts  oh-package.json5
common/lib/: share-plugin.ts
features/extend/: hvigorfile.ts  index.ets  oh-package.json5
features/photo/: index.ets  oh-package-lock.json5  oh-package.json5
features/video/: hvigorfile.ts  index.ets  oh-package-lock.json5  oh-package.json5
hvigor/: hvigor-config.json5
infra/: prepare.js
open_source/: Camera_OpenSource.html
product/pc/: build-profile.json5  hvigorfile.ts  oh-package.json5
product/pcpicker/: build-profile.json5  obfuscation-rules.txt  oh-package.json5
product/phone/: build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5  phone_camera.ap
product/picker/: obfuscation-rules.txt  oh-package.json5
product/tablet/: hvigorfile.ts  obfuscation-rules.txt  oh-package.json5
(+817 files in other folders)
